--- a/style.css
+++ b/style.css
@@ -1,78 +1,91 @@
-/* body {
-    background: #000000;
+/*This file looks like lessor scss*/
+
+.main-content {
+    padding: 0;
     margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
+    background-color: #fbeeee;
 
-#Particles:after {
-    content: " ";
-    position: absolute;
-    top: -2000px;
-    width: 2px;
-    height: 2px;
-    background: transparent;
-    border-radius: 100%;
-} */
 
-body {
-    background-color: #FCD9D9;
-    h1 {
-        color: #FCD9D9;
-    }
-    header {
+    .header {
         background-color: #EB7E8A;
         color: #fff;
         padding: 10px;
         text-align: center;
-    }
-    
-    h1 {
-        margin: 0;
-        float: left;
-    }
-    
-    #search-form {
-        margin-top: 10px;
-    }
-    
-    #search-input {
-        padding: 5px;
-        width: 200px;
-    }
-    
-    button {
-        padding: 5px 10px;
-        background-color: #FCD9D9;
-        color: #fff;
-        border: none;
-        cursor: pointer;
+
+        .header__block-wrapper {
+            display: flex;
+            justify-content: space-between;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 1280px;
+
+            .header__title {
+                margin: 0;
+                float: left;
+            }
+
+            .header__search-block {
+                /* try not to use #id for styling, instead use .class */
+                .search-form {
+                    margin-top: 10px;
+                }
+
+                .search-form__input {
+                    padding: 5px;
+                    width: 200px;
+                }
+            }
+        }
     }
 
+    .main {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1280px;
 
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-    }
+        .product-list {
+            padding-left: 2rem;
+            padding-right: 2rem;
+            margin-top: 20px;
+            display: grid;
+            grid-template-columns: repeat(4, minmax(0, 1fr));
+            gap: 1rem;
 
-    .photo {
-        width: 30%;
-        display: inline-block;
-        margin: 5px;
-        text-align: center;
-    }
-    .caption {
-        text-align: center;
-        font-size: 14px;
-        color: black;
-    }
-    .price {
-        text-align: center;
-        font-size: 16px;
-        color: black;
-    }
+            .product-item {
+                border-width: 1px;
+                border-radius: 0.5rem;
+                border-style: solid;
+                border-color: #c3c3c3;
+                overflow: hidden;
 
+                .product-item__img {
+                    width: 100%;
+                    object-fit: cover;
+                }
+
+                .product-item__info {
+                    flex-direction: column;
+                    display: flex;
+                    width: 80%;
+                    margin-left: auto;
+                    margin-right: auto;
+
+                    .product-item__info-name {
+
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+.size-medium-20 {
+    margin: 0;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.beauty-theme-color-second {
+    color: #796368;
 }
